--- a/webtech/week6/design5.html
+++ b/webtech/week6/design5.html
@@ -10,7 +10,7 @@
     <h1>Our 2025 key notespeaker</h1>
     <section>
         <article id="one">
-            <img src="C:\Users\Lenovo\webtech\webtech\week6\istockphoto-1350800599-170667a.jpg" height="300px" width="300px">
+            <img src="istockphoto-1350800599-170667a.jpg" height="300px" width="400px">
             <h2>furi shrerpa</h2>
             <h3>Marketing</h3>
                 <h3>Tesla</h3>
@@ -18,7 +18,7 @@
         </article>
 
         <article id="two">
-           <div id="img2"> <img src="C:\Users\Lenovo\webtech\webtech\week6\Headshot-Photography-London-0997.jpeg" height="300px" width="300px" ></div>
+           <div id="img2"> <img src="Headshot-Photography-London-0997.jpeg" height="300px" width="400px" ></div>
             <h2>raj shah</h2>
             <h3>Design</h3>
                <h3> esewa    </h3>
@@ -26,7 +26,7 @@
         </article>
 
         <article id="three">
-           <div id="im3"> <img src="C:\Users\Lenovo\webtech\webtech\week6\istockphoto-1171169127-612x612.jpg" height="300px" width="300px" ></div>
+           <div id="im3"> <img src="istockphoto-1171169127-612x612.jpg" height="300px" width="400px" ></div>
             <h2>Utsab Shrestha</h2>
             <h3>Founder and CEO</h3>
               <h3>  Online khabar
