--- a/webtech/week6/design5.html
+++ b/webtech/week6/design5.html
@@ -27,7 +27,7 @@
 
         <article id="three">
            <div id="im3"> <img src="istockphoto-1171169127-612x612.jpg" height="300px" width="400px" ></div>
-            <h2>Utsab Shrestha</h2>
+            <h2>sulav marharjan</h2>
             <h3>Founder and CEO</h3>
               <h3>  Online khabar
             </h3>
